--- a/register/create/index.html
+++ b/register/create/index.html
@@ -22,18 +22,21 @@
                         <a href="javascript:history.back()" class="fa-solid fa-arrow-left" id="back-btn"></a>
                     </div>
                     <div class="extra-opt">
-                        <a href="../create">
-                            Create <i class="fa-solid fa-plus"></i>
+                        <a href="../login">
+                            Already Exist? »
                         </a>
                     </div>
                 </div>
-                <h1>Welcome Back!</h1>
+                <h1>Make a nice username!</h1>
                 <div class="input-form">
+                    <div class="username-title font-display">
+                        <input type="text" class="text-field" placeholder="John Doe" autocomplete>
+                    </div>
                     <div class="email-title font-display">
-                        <input type="text" class="text-field" placeholder="Username" autocomplete>
+                        <input type="text" class="text-field" placeholder="example@gmail.com" autocomplete>
                     </div>
                     <div class="password-title font-display">
-                        <input type="password" class="text-field" placeholder="Password" autocomplete>
+                        <input type="password" class="text-field" placeholder="✱✱✱✱✱✱" autocomplete>
                     </div>
                     <a href="../../home">
                         <button class="submit-btn">SIGN IN</button>
