--- a/register/create/index.html
+++ b/register/create/index.html
@@ -27,7 +27,7 @@
                         </a>
                     </div>
                 </div>
-                <h1>Make a nice username!</h1>
+                <h1>Make a nice username.</h1>
                 <div class="input-form">
                     <div class="username-title font-display">
                         <input type="text" class="text-field" placeholder="John Doe" autocomplete>
@@ -42,14 +42,7 @@
                         <button class="submit-btn">SIGN IN</button>
                     </a>
                 </div>
-                <div class="more-info">
-                    <label class="rem-sect">
-                        <input type="checkbox" name="rem-cred" id="remember">
-                        Remember
-                    </label>
-                    <a href="../recover">Forget »</a>
-                </div>
-                
+            
                 <div class="alter-login">
                     <button id="google" class="redir">
                         <img src="images/Google-Icon.png" alt="google">
