--- a/home/index.html
+++ b/home/index.html
@@ -50,7 +50,10 @@
         </div>
         <div class="nav-tree">
             <div class="nav-items">
+                <i class="fa-solid fa-plus" title="Upload" class='fas fa-user-alt'></i>
+                <i class="fa-solid fa-bell" title="Notification" class='fas fa-user-alt'></i>
                 <i id="login-profile" title="Register" class='fas fa-user-alt' onclick="window.location.href='/register/login'"></i>
+                <i class="fa-solid fa-gear" title="Register" class='fas fa-user-alt'></i>
                 <div class="current-song" hidden></div>
             </div>
         </div>
