--- a/home/index.html
+++ b/home/index.html
@@ -13,12 +13,17 @@
     </div>
     <nav class="nav-section">
         <div class="nav-tree">
+            <a href="/introduction">
+                <img src="./images/triiben.png" alt="image" class="logo"/>
+            </a>
+        </div>
+        <div class="nav-tree">
             <div class="option-menu">
                 <div class="option-switch">
                     <button onclick="showMenu()" id="filter-show">
                         <i class="fa-solid fa-bars" class="burger-icon"></i>
                     </button>
-                    <input class="filter" type="text" placeholder="" id="search-query"> 
+                    <input class="filter" type="text" placeholder=" " id="search-query"> 
                 </div>
                 <div class="option-selector" id="menu-container">
                     <div class="option-tree">
@@ -44,11 +49,6 @@
             </div>
         </div>
         <div class="nav-tree">
-            <a href="/introduction">
-                <img src="./images/triiben.png" alt="image" class="logo"/>
-            </a>
-        </div>
-        <div class="nav-tree">
             <div class="nav-items">
                 <i class="fa-solid fa-plus" title="Upload" class='fas fa-user-alt'></i>
                 <i class="fa-solid fa-bell" title="Notification" class='fas fa-user-alt'></i>
@@ -60,7 +60,10 @@
     </nav>
     <div class="fade"></div>
     <section class="main-content">
-        <div></div>
+        <div class="left-content"></div>
+        <div class="center-content"></div>
+        <div class="right-content"></div>
+        <div class="footer-content"></div>
     </section>
     <script src="./script.js"></script>
 </body>
